NXP-28966 Align package on 10.10-HF25